--- a/css/exer-03-flex.css
+++ b/css/exer-03-flex.css
@@ -19,77 +19,54 @@
 }
 
 .box-1 {
-  flex-basis: 10%;
+  flex-basis: 20%;
+  display: flex;
 }
 
-.teste {
+.box-2 {
   display: flex;
   flex-basis: 20%;
-  width: 100%;
-  height: 50px;
-  margin: 15px auto;
-  padding: 1px;
-  max-width: 1366px;
+  padding: 25px;
 }
 
 .box-filho1 {
-  width: 150%;
-  padding: 200px;
+  width: 75%;
+  padding: 50px;
   border: 1px solid #008B8B;
-  margin-left: 10px;
+  margin-left: 20px;
   margin-bottom: 10px;
 }
 
 .box-filho2 {
-  width: 80%;
+  width: 20%;
+  padding: 50px;
   border: 1px solid #008B8B;
-  margin-left: 25px;
-  margin-right: 20px;
+  margin-left: 20px;
   margin-bottom: 10px;
 }
 
-.box1{
-  display: flex;
-  flex-basis: 20%;
-  width: 101%;
-  height: 100px;
-  margin: 15px auto;
-  padding: 1px;
-  max-width: 1387px;
-}
 
-.box2{
+.box-3 {
   display: flex;
-  flex-basis: 20%;
-  width: 101%;
-  height: 100px;
-  margin: 15px auto;
-  padding: 1px;
-  max-width: 1387px;
-}
-
-.box3{
-  display: flex;
-  flex-basis: 20%;
-  width: 98%;
-  height: 100px;
-  margin: 15px auto;
-  padding: 60px;
-  max-width: 1387px;
-  border: 1px solid #008B8B;
+  flex-basis: 40%;
+  flex-direction: row;
 }
 
 .box-filho3{
   border: 1px solid #008B8B;
-  width: 60%;
-  height: 250%;
-  margin-left: 10px;
+  width: 20%;
+  height: 90%;
+  margin: 10px 3%;
 }
 
-.box-filho4{
-  border: 1px solid #008B8B;
-  width: 44%;
-  height: 250%;
-  margin-right: 20px;
-  margin-left: 20px;
+.box-4 {
+  flex-basis: 30%;
+}
+
+.box-filho4 {
+  margin: 20px auto;
+  border-left: 1px solid #008B8B;
+  border-right: 1px solid #008B8B;
+  width: 55%;
+  height: 80%;
 }
