--- a/css/exer-03-flex.css
+++ b/css/exer-03-flex.css
@@ -50,31 +50,12 @@
   height: 200px;
   width: 97%;
   margin-left: 40px;
-  border: 1px solid;
+  border: 1px solid  #4682B4;
   display: flex;
 }
 
 .box-filho3{
   border: 1px solid #008B8B;
-  width: 20%;
-  height: 90%;
-  margin: 10px 3%;
-}
-
-.box-4 {
-  flex-basis: 30%;
-}
-
-.box-filho4 {
-  margin: 20px auto;
-  border-left: 1px solid #008B8B;
-  border-right: 1px solid #008B8B;
-  width: 55%;
-  height: 80%;
-}
-
-.box3{
-  border: 1px solid;
   margin: 20px;
   height: 160px;
   width: 50%;
@@ -82,47 +63,47 @@
   margin-top: 10px;
 }
 
-.box4{
+.box-filho4{
   flex-direction: column;
-  border: 0px;
+  border: 0px #008B8B;
   margin-top: 10px;
   height: 100px;
   width: 22%;
 
 }
 
-.box5{
-  border: 1px solid;
+.box-filho5{
+  border: 1px solid #008B8B;
   margin: auto 0%;
   height: 80px;
   width: 105%;
   margin-bottom: 10px;
 }
 
-.box6{
-  border: 1px solid;
+.box-filho6{
+  border: 1px solid #008B8B;
   height: 80px;
   width: 105%;
 }
 
-.box7{
-  flex-direction: column;
-  border: 0px;
+.box-filho7{
+  flex-direction: column ;
+  border: 0px #008B8B;
   margin: 10px 10px 10px 20px;
   height: 100px;
   width: 25%
 }
 
-.box8{
-  border: 1px solid;
+.box-filho8{
+  border: 1px solid #008B8B;
   height: 80px;
   width: 95%;
   margin-left: 10px;
   margin-bottom: 10px;
 }
 
-.box9{
-  border: 1px solid;
+.box-filho9{
+  border: 1px solid #008B8B;
   height: 80px;
   width: 95%;
   margin-left: 10px;
