--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -1,1 +1,71 @@
 @charset "UTF-8";
+
+.container {
+  display: flex;
+  flex-direction: column;
+
+}
+
+.box {
+  border: 1px solid #ff0000;
+  display: block;
+  width: 97%;
+
+  margin: 20px;
+  padding:10px;
+  max-width: 1100px;
+}
+
+
+.box-1 {
+  flex-basis: 10%;
+}
+
+.box-2 {
+  display: flex;
+}
+  .box-child-1{
+    height: 150px;
+    flex-basis: 25%;
+  }
+  .box-child-2 {
+    height: 150px;
+    flex-grow:2;
+  }
+
+.box-3 {
+  display: flex;
+}
+
+  .box-child-3 {
+    flex-grow: 1;
+    height:230px;
+  }
+
+  .box-child-4 {
+    flex-grow: 1;
+    height:230px;
+  }
+
+  .box-child-5 {
+    flex-grow: 1;
+    height:230px;
+  }
+
+  .box-child-6 {
+    flex-grow: 1;
+    height:230px;
+  }
+
+.box-4 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.box-child-7 {
+  flex-basis: 50%;
+  height: 130px;
+  border-top: 0;
+  border-bottom: 0;
+}
