--- a/css/style-base.css
+++ b/css/style-base.css
@@ -17,3 +17,12 @@ body{
 h1,h2,h3{
   margin: 20px 10px;
 }
+.container {
+  max-width: 1100px;
+  width: 97%;
+  height: 1000px;
+  margin: auto;
+  padding: 10px;
+  background-color: #c2bee6;
+  border: 1px solid #cccccc;
+}
