--- a/css/style-base.css
+++ b/css/style-base.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+@charset "UTF-8";
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
 *{
@@ -11,13 +12,18 @@
 body{
   font-family: 'Lato', sans-serif;
   font-size: 16px;
+  max-width: 1100px
 }
 
-h1,h2,h3,h4{
+h1,h2,h3{
   margin: 20px 10px;
 }
 
-
-ul {
-  margin-left: 24px;
+.container {
+  width: 97%;
+  height: 900px;
+  margin: 10px;
+  padding: 10px;
+  background-color: #c2bee6;
+  border: 1px solid #cccccc;
 }
