--- a/css/exer-01-flex.css
+++ b/css/exer-01-flex.css
@@ -1,209 +1,84 @@
-@charset "UTF-8";
-@import "./style-base.css";
-
-
-.box-master{
-  display: flex;
-  flex-direction: column;
-  background-color: rgb(48, 48, 92);
-  padding: 16px;
-  margin: 16px;
-  border-radius: 8px;
+.box1 {
+  flex-basis: 10%;
 }
 
-.box-row {
+.box2 {
   display: flex;
-  flex-direction: row;
-  flex: 1;
-  margin: 16px;
-  border: 2px solid rgb(225, 255, 232);
-  padding: 16px;
 }
 
-.box-row-fill {
+.box3 {
   display: flex;
-  flex-direction: row;
-  flex: 1;
+  flex-basis: 35%;
+}
+
+.box4 {
+  display: flex;
 }
 
 .box {
-  min-height: 256px;
-  border: 2px solid rgb(225, 255, 232);
-}
-
-.box-grid {
-  min-height: 256px;
-  border: 2px solid rgb(225, 255, 232);
-  display: flex;
-  flex-direction: column;
-}
-
-
-.box-2a, .box-2b {
-  margin: 10px;
-}
-.box-2a {
-  flex-basis: 20%;
-  background-color: #0f9460;
-}
-
-.box-2b {
-  flex-basis: 80%;
-  background-color: #37cb45;
-}
-
-.box-3a, .box-3b, .box-3c, .box-3d {
-  margin: 10px 40px;
-  flex-basis: 25%;
-}
-
-.box-3a {
-  background-color: #b922a8;
-}
-
-.box-3b {
-  background-color: #de2387;
-}
-
-.box-3c {
-  background-color: #e81c4e;
-}
-
-.box-3d {
-  background-color: #a1749f;
-}
-
-.box-4a {
-
-  flex-basis: 70%;
-  margin-right: 16px;
-}
-
-
-.box-b {
-  width: 99%;
-  padding: 10px;
-  display: block;
-  margin: 10px;
-}
-
-.box-5, .box-6 {
-  display: flex;
-  flex-direction: row;
-}
-
-.box-5 {
-  height: 400px;
-}
-
-.box-5a {
-  flex-basis: 70%;
-  background-color: #000000;
-}
-
-.box-5b {
-  flex-basis: 30%;
-  background-color: #000000;
-}
-
-.box-6 {
-  height: 250px;
-}
-
-.box-6a {
-    background-color: #000000;
-    flex-basis: 33%;
-}
-
-.box-6b {
-    background-color: #000000;
-    flex-basis: 33%;
-}
-
-.box-6c {
-    background-color: #000000;
-    flex-basis: 33%;
-}
-
-.box-7 {
+  border: 1px solid #B1B1B3;
+  width: 97%;
   height: 150px;
-  background-color: #000000;
-  width: 96%;
-  margin: 10px 30px;
+  margin: 20px;
+  padding: 10px;
+  max-width: 1100px;
 }
 
-.box-c {
-    width: 99%;
-    padding: 10px 5px;
-    display: block;
-    margin: 10px;
-}
-
-.box-8, .box-10, .box-12 {
-  display: flex;
-}
-
-.box-8, .box-13 {
-  background-color: #ffffff;
+.box5 {
+  border: 1px solid white;
+  margin: 20px;
   height: 100px;
-  margin: auto;
-  width: 99%;
+  width: 24%;
+  background-color: #9AEDE5;
 }
 
-.box-8a {
-  background-color: #000000;
-  flex-basis: 85%;
-  margin: 1px 10px 1px 5px;
+.box6 {
+  border: 1px solid white;
+  margin: 20px;
+  height: 100px;
+  width: 80%;
+  background-color: #9AEDE5;
 }
 
-.box-8b {
-  background-color: #000000;
-  flex-basis: 15%;
-  margin: 1px 5px 1px 5px;
-}
-
-
-.box-9, .box-11 {
-  background-color: #ffffff;
-  height: 50px;
-  margin: auto;
-}
-
-.box-10 {
-  background-color: #ffffff;
+.box7 {
+  border: 1px solid white;
+  margin: 20px;
   height: 200px;
+  width: 25%;
+  background-color: #9AEDE5;
+}
+
+.box8 {
+  border: 1px solid white;
+  margin: 20px;
+  height: 200px;
+  width: 25%;
+  background-color: #9AEDE5;
+}
+
+.box9 {
+  border: 1px solid white;
+  margin: 20px;
+  height: 200px;
+  width: 25%;
+  background-color: #9AEDE5;
+}
+
+.box10 {
+  border: 1px solid white;
+  margin: 20px;
+  height: 200px;
+  width: 25%;
+  background-color: #9AEDE5;
+}
+
+.box11 {
+  border: 1px solid white;
+  margin-left: 277px;
   display: flex;
 }
 
-.box-10a, .box-12a {
-  flex-basis: 70%;
-  background-color: #000000;
+.box12{
+  border: 1px solid white;
+  margin-left: 470px;
 }
-
-.box-10-divisao, .box-12-divisao {
-  flex-basis: 30%;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  margin-top: auto;
-  margin-right: -30px;  
-  margin-bottom: auto;
-  margin-left: auto;
-  padding: 13px 13px 13px 0px;
-}
-
-.box-10b, .box-10c, .box-10d, .box-10e, .box-12b, .box-12c, .box-12d, .box-12e {
-  background-color: #000000;
-  flex-basis: 40%;
-  display: flex;
-  width: 300px;
-  padding: 35px;
-  margin-top: 1px;
-}
-
-.box-12 {
-  background-color: #ffffff;
-  display: flex;
-  flex-direction: row-reverse;
-}
-
