--- a/css/exer-03-flex.css
+++ b/css/exer-03-flex.css
@@ -1,162 +1,175 @@
-@charset "UTF-8";
-
-
-.container {
-  border: 1px solid #000000;
-}
-
-.box {
-  max-width: 1100px;
-  border: 2px solid #000000;
-  margin: 10px 0px 10px 15px;
+.box1{
+  border: 1px solid #B1B1B3;
+  margin: 10px;
+  flex-basis: 100px;
+  width: 97%;
   display: flex;
 }
 
-.box-1 {
-  width: 100%;
-  height: 70px;
-  margin: 0;
-  background-color: white;
+.box2{
+  background-color: #9AEDE5;
+  border: 1px solid white;
+  margin: 10px;
+  height: 75px;
+  width: 71%;
+  margin-right: 20px;
 }
 
-.box-filho1 {
-  height: 50px;
-  width: 80%;
+.box3{
+  border: 1px solid white;
+  margin-top: 10px;
+  height: 75px;
+  width: 25.3%;
+  background-color: #9AEDE5;
 }
 
-.box-filho12 {
-  height: 50px;
-  width: 15.5%;
+.box4{
+  border: 1px solid #B1B1B3;
+  margin: 10px;
+  height: 35px;
+  width: 97%;
 }
 
-.box-2 {
-  height: 20px;
-  width: 100%;
-  margin: 10px 0 20px 0;
-  background-color: white;
+.box5{
+  border: 1px solid #B1B1B3;
+  margin: 10px;
+  height: 200px;
+  width: 97%;
+  display: flex;
 }
 
-.box-3 {
-  height: 150px;
-  width: 100%;
-  margin: 10px 0 20px 0;
-  background-color: red;
+.box6{
+  border: 1px solid white;
+  margin: 10px;
+  height: 180px;
+  width: 50%;
+  display: flex;
+  background-color: #9AEDE5;
 }
 
-.box-filho3 {
-  height: 130px;
-  width: 70%;
-}
-
-.box-filho31{
+.box7{
   flex-direction: column;
   border: 0px;
-  width: 12%;
-  height: 130px;
-}
-
-.box-filho32{
-  margin: 0px;
-  height: 500px;
-  width: 100%;
-  margin-bottom: 0px;
-}
-
-.box-filho33{
-  margin-left: 0;
-  height: 500px;
-  width: 100%;
-  margin-bottom: 0px;
-}
-
-.box-filho34 {
-  flex-direction: column;
-  border: 0px;
-  width: 12%;
-  height: 140px;
-  margin-top: 0px;
-}
-
-.box-filho35 {
-  margin-left: 0;
-  height: 500px;
-  width: 100%;
-  margin-bottom: 0px;
-}
-
-.box-filho36 {
-  margin-left: 0;
-  height: 500px;
-  width: 100%;
-  margin-bottom: 0px;
-}
-
-.box-4 {
-  height: 20px;
-  width: 100%;
-  margin: 10px 0 20px 0;
-  background-color: red;
-}
-
-.box-5 {
-  height: 150px;
-  width: 100%;
-  margin: 10px 0 20px 0;
-  background-color: red;
-}
-
-.box-filho51 {
-  flex-direction: column;
-  border: 0px;
-  width: 12%;
-  height: 140px;
-  margin-top: 0px;
-}
-
-.box-filho52 {
-  margin-left: 0;
-  height: 500px;
-  width: 100%;
-  margin-bottom: 0px;
-}
-
-.box-filho53{
-  margin-left: 0;
-  height: 500px;
-  width: 100%;
-  margin-bottom: 0px;
-}
-
-.box-filho54 {
-  flex-direction: column;
-  border: 0px;
-  width: 12%;
-  height: 140px;
-  margin-top: 0px;
-}
-
-.box-filho55 {
-  margin-left: 0;
-  height: 500px;
-  width: 100%;
-  margin-bottom: 0px;
-}
-
-.box-filho56 {
-  margin-left: 0;
-  height: 500px;
-  width: 100%;
-  margin-bottom: 0px;
-}
-
-.box-filho57 {
-  height: 130px;
-  width: 70%;
-}
-
-.box-filho6 {
-  width: 100%;
+  margin-top: 10px;
   height: 100px;
-  margin: 10px 0 20px 0;
-  background-color: white;
+  width: 22%;
+}
+
+.box8{
+  border: 1px solid white;
+  margin: 0px;
+  height: 85px;
+  width: 100%;
+  margin-bottom: 10px;
+  background-color: #9AEDE5;
+}
+
+.box9{
+  border: 1px solid white;
+  height: 85px;
+  width: 100%;
+  background-color: #9AEDE5;
+}
+
+.box10{
+  flex-direction: column;
+  border: 0px;
+  margin: 10px 10px 10px 20px;
+  height: 100px;
+  width: 25%;
+}
+
+.box11{
+  border: 1px solid white;
+  height: 85px;
+  width: 100%;
+  margin-bottom: 10px;
+  background-color: #9AEDE5;
+}
+
+.box12{
+  border: 1px solid white;
+  height: 85px;
+  width: 100%;
+  background-color: #9AEDE5;
+}
+
+.box13{
+  border: 1px solid #B1B1B3;
+  margin: 10px;
+  height: 30px;
+  width: 97%;
+}
+
+.box14{
+  border: 1px solid #B1B1B3;
+  margin: 10px;
+  height: 200px;
+  width: 97%;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.box15{
+  border: 1px solid white;
+  margin: 10px;
+  height: 180px;
+  width: 50%;
+  display: flex;
+  background-color: #9AEDE5;
+}
+
+.box16{
+  flex-direction: column;
+  border: 0px;
+  margin-top: 10px;
+  height: 100px;
+  width: 22%;
+}
+
+.box17{
+  border: 1px solid white;
+  margin: 0px;
+  height: 85px;
+  width: 100%;
+  margin-bottom: 10px;
+  background-color: #9AEDE5;
+}
+
+.box18{
+  border: 1px solid white;
+  height: 85px;
+  width: 100%;
+  background-color: #9AEDE5;
+}
+
+.box19{
+  flex-direction: column;
+  border: 0px;
+  margin: 10px 20px 10px 10px;
+  height: 100px;
+  width: 25%;
+}
+
+.box20{
+  border: 1px solid white;
+  height: 85px;
+  width: 100%;
+  background-color: #9AEDE5;
+  margin-bottom: 10px;
+}
+
+.box21{
+  border: 1px solid white;
+  height: 85px;
+  width: 100%;
+  background-color: #9AEDE5;
+}
+
+.box22{
+  border: 1px solid #B1B1B3;
+  margin: 10px;
+  height: 75px;
+  width: 97%;
+  margin-right: 20px;
 }
