--- a/css/style-base.css
+++ b/css/style-base.css
@@ -1,7 +1,6 @@
-@charset "UTF-8";
-
-@charset "UTF-8";
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+body{
+  font-size: 18px;
+}
 
 *{
   margin: 0;
@@ -9,21 +8,53 @@
   box-sizing: border-box;
 }
 
-body{
-  font-family: 'Lato', sans-serif;
-  font-size: 16px;
-  max-width: 1100px
+.tela1{
+  text-align: left;
+  margin-left: 10px
 }
 
 h1,h2,h3{
   margin: 20px 10px;
+  text-align: center
 }
 
 .container {
+  flex-direction: column;
   width: 97%;
-  height: 900px;
+  height: 800px;
   margin: 10px;
   padding: 10px;
-  background-color: #c2bee6;
-  border: 1px solid #cccccc;
+  border: 1px solid #B1B1B3;
+  display: flex;
+}
+
+.container2{
+  flex-direction: row;
+  display: flex;
+  width: 92%;
+  height: 400px;
+  padding: 10px;
+  border: 1px solid #B1B1B3;
+  margin-left: 20px;
+}
+
+.container3{
+  flex-direction: row;
+  display: flex;
+  width: 92%;
+  height: 223px;
+  padding: 10px;
+  border: 1px solid #B1B1B3;
+  margin-left: 20px;
+}
+
+.container4{
+  flex-direction: row;
+  display: flex;
+  width: 92%;
+  height: 120px;
+  padding: 10px;
+  border: 1px solid #B1B1B3;
+  margin-left: 20px;
+  margin-bottom: 20px;
 }
